# mva

./: .gitignore  README.md
3d-computer-vision/: README.md
3d-computer-vision/ex1-panorama/: Panorama.cpp
3d-computer-vision/ex2-fundamental-matrix/: Fundamental.cpp
3d-computer-vision/ex3-seeds/: Seeds.cpp
3d-computer-vision/ex4-gc-disparity/: CMakeLists.txt  stereoGC.cpp
computational-optimal-transport/: README.md
computational-optimal-transport/numerical-tours/: optimaltransp_1_linprog.ipynb  optimaltransp_5_entropic.ipynb  optimaltransp_6_entropic_adv.ipynb  optimaltransp_7_semidiscrete.ipynb
convex-optimization/: README.md  homework3.ipynb
image-denoising/: README.md
image-denoising/Part 2/: tp1_denoising_MASQUIL.ipynb  tp3_denoising_MASQUIL.ipynb  tp4_denoising_MASQUIL.ipynb
probabilistic-graphical-models/: README.md
probabilistic-graphical-models/homework-1/: MVA_DM1_MASQUIL_VIOLANTE.ipynb  homework.html
probabilistic-graphical-models/homework-2/: MVA_DM2_Gaussian_Process_MASQUIL_VIOLANTE.ipynb  MVA_DM2_IWAE_MASQUIL_VIOLANTE.ipynb
reinforcement-learning/: README.md
reinforcement-learning/homework-1/: RL_MVA_2021_Homework_1.ipynb
reinforcement-learning/homework-2/: RL_MVA_2021_Homework_2.ipynb
reinforcement-learning/homework-3/: RL_MVA_2021_Homework_3.ipynb
